// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API /progressv2 returns correct data on course id, include deleted false 1`] = `
Object {
  "data": Object {
    "completion": Object {
      "certificate_id": null,
      "completion_date": "2000-01-01T08:00:00.000Z",
      "completion_language": null,
      "completion_registration_attempt_date": "2022-01-01T08:00:00.000Z",
      "course_id": "00000000-0000-0000-0000-000000000001",
      "created_at": "2000-01-01T08:00:00.000Z",
      "eligible_for_ects": true,
      "email": "e@mail.com",
      "grade": null,
      "id": "30000000-0000-0000-0000-000000000103",
      "student_number": null,
      "tier": null,
      "updated_at": "2000-01-01T08:00:00.000Z",
      "user_id": "20000000-0000-0000-0000-000000000102",
      "user_upstream_id": 1,
    },
    "course_id": "00000000-0000-0000-0000-000000000001",
    "exercise_completions": Object {
      "50000000-0000-0000-0000-000000000001": Object {
        "completed": true,
        "exercise_id": "50000000-0000-0000-0000-000000000001",
        "max_points": 2,
        "n_points": "6.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid1",
        "section": 1,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
      "50000000-0000-0000-0000-000000000002": Object {
        "completed": false,
        "exercise_id": "50000000-0000-0000-0000-000000000002",
        "max_points": 3,
        "n_points": "0.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid2",
        "section": 2,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
    },
    "user_id": "20000000-0000-0000-0000-000000000102",
  },
}
`;

exports[`API /progressv2 returns correct data on course id, include deleted true 1`] = `
Object {
  "data": Object {
    "completion": Object {
      "certificate_id": null,
      "completion_date": "2000-01-01T08:00:00.000Z",
      "completion_language": null,
      "completion_registration_attempt_date": "2022-01-01T08:00:00.000Z",
      "course_id": "00000000-0000-0000-0000-000000000001",
      "created_at": "2000-01-01T08:00:00.000Z",
      "eligible_for_ects": true,
      "email": "e@mail.com",
      "grade": null,
      "id": "30000000-0000-0000-0000-000000000103",
      "student_number": null,
      "tier": null,
      "updated_at": "2000-01-01T08:00:00.000Z",
      "user_id": "20000000-0000-0000-0000-000000000102",
      "user_upstream_id": 1,
    },
    "course_id": "00000000-0000-0000-0000-000000000001",
    "exercise_completions": Object {
      "50000000-0000-0000-0000-000000000001": Object {
        "completed": true,
        "exercise_id": "50000000-0000-0000-0000-000000000001",
        "max_points": 2,
        "n_points": "6.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid1",
        "section": 1,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
      "50000000-0000-0000-0000-000000000002": Object {
        "completed": false,
        "exercise_id": "50000000-0000-0000-0000-000000000002",
        "max_points": 3,
        "n_points": "0.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid2",
        "section": 2,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
      "50000000-0000-0000-0000-000000000005": Object {
        "completed": false,
        "exercise_id": "50000000-0000-0000-0000-000000000005",
        "max_points": null,
        "n_points": "1.000000000000000000000000000000",
        "part": null,
        "quizzes_id": "customid5",
        "section": null,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
    },
    "user_id": "20000000-0000-0000-0000-000000000102",
  },
}
`;

exports[`API /progressv2 returns correct data on course slug, include deleted false 1`] = `
Object {
  "data": Object {
    "completion": Object {
      "certificate_id": null,
      "completion_date": "2000-01-01T08:00:00.000Z",
      "completion_language": null,
      "completion_registration_attempt_date": "2022-01-01T08:00:00.000Z",
      "course_id": "00000000-0000-0000-0000-000000000001",
      "created_at": "2000-01-01T08:00:00.000Z",
      "eligible_for_ects": true,
      "email": "e@mail.com",
      "grade": null,
      "id": "30000000-0000-0000-0000-000000000103",
      "student_number": null,
      "tier": null,
      "updated_at": "2000-01-01T08:00:00.000Z",
      "user_id": "20000000-0000-0000-0000-000000000102",
      "user_upstream_id": 1,
    },
    "course_id": "00000000-0000-0000-0000-000000000001",
    "exercise_completions": Object {
      "50000000-0000-0000-0000-000000000001": Object {
        "completed": true,
        "exercise_id": "50000000-0000-0000-0000-000000000001",
        "max_points": 2,
        "n_points": "6.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid1",
        "section": 1,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
      "50000000-0000-0000-0000-000000000002": Object {
        "completed": false,
        "exercise_id": "50000000-0000-0000-0000-000000000002",
        "max_points": 3,
        "n_points": "0.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid2",
        "section": 2,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
    },
    "user_id": "20000000-0000-0000-0000-000000000102",
  },
}
`;

exports[`API /progressv2 returns correct data on course slug, include deleted true 1`] = `
Object {
  "data": Object {
    "completion": Object {
      "certificate_id": null,
      "completion_date": "2000-01-01T08:00:00.000Z",
      "completion_language": null,
      "completion_registration_attempt_date": "2022-01-01T08:00:00.000Z",
      "course_id": "00000000-0000-0000-0000-000000000001",
      "created_at": "2000-01-01T08:00:00.000Z",
      "eligible_for_ects": true,
      "email": "e@mail.com",
      "grade": null,
      "id": "30000000-0000-0000-0000-000000000103",
      "student_number": null,
      "tier": null,
      "updated_at": "2000-01-01T08:00:00.000Z",
      "user_id": "20000000-0000-0000-0000-000000000102",
      "user_upstream_id": 1,
    },
    "course_id": "00000000-0000-0000-0000-000000000001",
    "exercise_completions": Object {
      "50000000-0000-0000-0000-000000000001": Object {
        "completed": true,
        "exercise_id": "50000000-0000-0000-0000-000000000001",
        "max_points": 2,
        "n_points": "6.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid1",
        "section": 1,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
      "50000000-0000-0000-0000-000000000002": Object {
        "completed": false,
        "exercise_id": "50000000-0000-0000-0000-000000000002",
        "max_points": 3,
        "n_points": "0.000000000000000000000000000000",
        "part": 1,
        "quizzes_id": "customid2",
        "section": 2,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
      "50000000-0000-0000-0000-000000000005": Object {
        "completed": false,
        "exercise_id": "50000000-0000-0000-0000-000000000005",
        "max_points": null,
        "n_points": "1.000000000000000000000000000000",
        "part": null,
        "quizzes_id": "customid5",
        "section": null,
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
    },
    "user_id": "20000000-0000-0000-0000-000000000102",
  },
}
`;

exports[`API /register-completions creates registered completions 1`] = `
Array [
  Object {
    "completion_id": "30000000-0000-0000-0000-000000000102",
    "course_id": "00000000-0000-0000-0000-000000000002",
    "created_at": Any<Date>,
    "id": Any<String>,
    "organization_id": "10000000-0000-0000-0000-000000000102",
    "real_student_number": "12345",
    "registration_date": null,
    "updated_at": Any<Date>,
    "user_id": "20000000-0000-0000-0000-000000000102",
  },
  Object {
    "completion_id": "30000000-0000-0000-0000-000000000103",
    "course_id": "00000000-0000-0000-0000-000000000001",
    "created_at": Any<Date>,
    "id": Any<String>,
    "organization_id": "10000000-0000-0000-0000-000000000102",
    "real_student_number": "12345",
    "registration_date": null,
    "updated_at": Any<Date>,
    "user_id": "20000000-0000-0000-0000-000000000102",
  },
]
`;

exports[`API /stored-data get returns stored data from owned course 1`] = `
Array [
  Object {
    "completions": Array [
      Object {
        "certificate_id": null,
        "completion_date": "2000-01-01T08:00:00.000Z",
        "completion_language": null,
        "completion_registration_attempt_date": "2022-01-01T08:00:00.000Z",
        "course_id": "00000000-0000-0000-0000-000000000001",
        "created_at": "2000-01-01T08:00:00.000Z",
        "eligible_for_ects": true,
        "email": "e@mail.com",
        "grade": null,
        "id": "30000000-0000-0000-0000-000000000103",
        "student_number": null,
        "tier": null,
        "updated_at": "2000-01-01T08:00:00.000Z",
        "user_id": "20000000-0000-0000-0000-000000000102",
        "user_upstream_id": 1,
      },
    ],
    "storedData": Object {
      "course_id": "00000000-0000-0000-0000-000000000001",
      "created_at": "1900-01-01T08:00:00.000Z",
      "data": "user1_foo",
      "updated_at": "1900-01-01T08:00:00.000Z",
      "user_id": "20000000-0000-0000-0000-000000000102",
    },
    "user": Object {
      "administrator": false,
      "created_at": "1900-01-01T08:00:00.000Z",
      "email": "e@mail.com",
      "first_name": null,
      "id": "20000000-0000-0000-0000-000000000102",
      "last_name": null,
      "real_student_number": null,
      "research_consent": null,
      "student_number": null,
      "updated_at": "1900-01-01T08:00:00.000Z",
      "upstream_id": 1,
      "username": "existing_user",
    },
  },
]
`;
